@@ -1,5 +1,7 @@
 package com.clbooster.app.views;
 
+import com.clbooster.app.views.util.StyleConstants;
+
 import jakarta.annotation.security.PermitAll;
 import com.clbooster.app.backend.service.authentication.AuthenticationService;
 import com.clbooster.app.backend.service.profile.User;
@@ -28,13 +30,13 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Route(value = "dashboard", layout = MainLayout.class)
 @PageTitle("Dashboard | CL Booster")
 @PermitAll
-public class DashboardView extends VerticalLayout {
+class DashboardView extends VerticalLayout {
+    private static final String FILE_EXTENSION_REGEX = "\\.[^.]+$";
 
     private static final String PRIMARY = "#007AFF";
     private static final String TEXT_PRIMARY = "#1d1d1f";
@@ -49,11 +51,11 @@ public class DashboardView extends VerticalLayout {
 
     // Class-level field — must be assigned, not shadowed by a local variable
     private HorizontalLayout lettersGrid;
-    private List<LetterCardData> allLetters;
+    private transient List<LetterCardData> allLetters;
 
-    private final AuthenticationService authService;
+    private final transient AuthenticationService authService;
     private final TranslationService translationService;
-    private final User currentUser;
+    private final transient User currentUser;
 
     public DashboardView() {
         this.authService = new AuthenticationService();
@@ -62,7 +64,8 @@ public class DashboardView extends VerticalLayout {
 
         setPadding(true);
         setSpacing(false);
-        getStyle().set("gap", "28px").set("padding", "32px").set("background", BG_WHITE);
+        getStyle().set("gap", "28px").set(StyleConstants.CSS_PADDING, "32px").set(StyleConstants.CSS_BACKGROUND,
+                BG_WHITE);
         setSizeFull();
 
         add(createHeader());
@@ -82,22 +85,26 @@ public class DashboardView extends VerticalLayout {
 
         String firstName = currentUser != null ? currentUser.getFirstName() : "Guest";
         H1 title = new H1(translationService.translate("dashboard.welcome", firstName) + " 👋");
-        title.getStyle().set("font-size", "28px").set("font-weight", "700").set("letter-spacing", "-0.02em")
-                .set("color", TEXT_PRIMARY).set("margin", "0");
+        title.getStyle().set(StyleConstants.CSS_FONT_SIZE, "28px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_LETTER_SPACING, "-0.02em").set(StyleConstants.CSS_COLOR, TEXT_PRIMARY)
+                .set(StyleConstants.CSS_MARGIN, "0");
 
         int weekCount = countLettersThisWeek();
         String weekMsg = weekCount == 0 ? translationService.translate("dashboard.noLettersYet")
                 : weekCount + " " + translationService.translate("dashboard.lettersGenerated");
         Paragraph sub = new Paragraph(weekMsg);
-        sub.getStyle().set("font-size", "14px").set("color", TEXT_SECONDARY).set("margin", "0");
+        sub.getStyle().set(StyleConstants.CSS_FONT_SIZE, "14px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY)
+                .set(StyleConstants.CSS_MARGIN, "0");
 
         text.add(title, sub);
 
         Button createBtn = new Button(translationService.translate("dashboard.newCoverLetter"),
                 VaadinIcon.PLUS.create());
-        createBtn.getStyle().set("background", PRIMARY).set("color", "white").set("font-weight", "600")
-                .set("border-radius", "9999px").set("padding", "12px 24px")
-                .set("box-shadow", "0 10px 15px -3px rgba(0,122,255,0.3)");
+        createBtn.getStyle().set(StyleConstants.CSS_BACKGROUND, PRIMARY)
+                .set(StyleConstants.CSS_COLOR, StyleConstants.VAL_WHITE).set(StyleConstants.CSS_FONT_WEIGHT, "600")
+                .set(StyleConstants.CSS_BORDER_RADIUS, StyleConstants.VAL_9999PX)
+                .set(StyleConstants.CSS_PADDING, "12px 24px")
+                .set(StyleConstants.CSS_BOX_SHADOW, "0 10px 15px -3px rgba(0,122,255,0.3)");
         createBtn.addClickListener(e -> getUI().ifPresent(ui -> ui.navigate(GeneratorWizardView.class)));
 
         HorizontalLayout header = new HorizontalLayout(text, createBtn);
@@ -117,7 +124,7 @@ public class DashboardView extends VerticalLayout {
 
         HorizontalLayout row = new HorizontalLayout();
         row.setWidthFull();
-        row.getStyle().set("gap", "20px").set("flex-wrap", "wrap");
+        row.getStyle().set("gap", "20px").set(StyleConstants.CSS_FLEX_WRAP, "wrap");
 
         row.add(createStatTile(translationService.translate("dashboard.coverLetters"), String.valueOf(totalLetters),
                 translationService.translate("dashboard.allTimeGenerated"), VaadinIcon.FILE_TEXT, PRIMARY,
@@ -140,29 +147,36 @@ public class DashboardView extends VerticalLayout {
     private Div createStatTile(String label, String value, String subtext, VaadinIcon icon, String accentColor,
             String bgColor) {
         Div tile = new Div();
-        tile.getStyle().set("flex", "1").set("min-width", "180px").set("background", BG_WHITE)
-                .set("border", "1px solid rgba(0,0,0,0.07)").set("border-radius", "20px").set("padding", "24px")
-                .set("box-shadow", "0 2px 8px rgba(0,0,0,0.04)");
+        tile.getStyle().set("flex", "1").set(StyleConstants.CSS_MIN_WIDTH, "180px")
+                .set(StyleConstants.CSS_BACKGROUND, BG_WHITE)
+                .set(StyleConstants.CSS_BORDER, "1px solid rgba(0,0,0,0.07)")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "20px").set(StyleConstants.CSS_PADDING, "24px")
+                .set(StyleConstants.CSS_BOX_SHADOW, "0 2px 8px rgba(0,0,0,0.04)");
 
         // Icon badge
         Div iconBadge = new Div();
-        iconBadge.getStyle().set("width", "44px").set("height", "44px").set("border-radius", "14px")
-                .set("background", bgColor).set("display", "flex").set("align-items", "center")
-                .set("justify-content", "center").set("margin-bottom", "16px");
+        iconBadge.getStyle().set(StyleConstants.CSS_WIDTH, "44px").set(StyleConstants.CSS_HEIGHT, "44px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "14px").set(StyleConstants.CSS_BACKGROUND, bgColor)
+                .set(StyleConstants.CSS_DISPLAY, "flex").set(StyleConstants.CSS_ALIGN_ITEMS, StyleConstants.VAL_CENTER)
+                .set(StyleConstants.CSS_JUSTIFY_CONTENT, StyleConstants.VAL_CENTER)
+                .set(StyleConstants.CSS_MARGIN_BOTTOM, "16px");
         Icon ic = icon.create();
-        ic.getStyle().set("color", accentColor).set("width", "22px").set("height", "22px");
+        ic.getStyle().set(StyleConstants.CSS_COLOR, accentColor).set(StyleConstants.CSS_WIDTH, "22px")
+                .set(StyleConstants.CSS_HEIGHT, "22px");
         iconBadge.add(ic);
 
         H2 val = new H2(value);
-        val.getStyle().set("font-size", "32px").set("font-weight", "700").set("color", TEXT_PRIMARY)
-                .set("margin", "0 0 4px 0").set("line-height", "1");
+        val.getStyle().set(StyleConstants.CSS_FONT_SIZE, "32px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_COLOR, TEXT_PRIMARY).set(StyleConstants.CSS_MARGIN, "0 0 4px 0")
+                .set("line-height", "1");
 
         Paragraph lbl = new Paragraph(label);
-        lbl.getStyle().set("font-size", "13px").set("font-weight", "700").set("color", TEXT_PRIMARY).set("margin",
-                "0 0 2px 0");
+        lbl.getStyle().set(StyleConstants.CSS_FONT_SIZE, "13px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_COLOR, TEXT_PRIMARY).set(StyleConstants.CSS_MARGIN, "0 0 2px 0");
 
         Paragraph sub = new Paragraph(subtext);
-        sub.getStyle().set("font-size", "11px").set("color", TEXT_SECONDARY).set("margin", "0");
+        sub.getStyle().set(StyleConstants.CSS_FONT_SIZE, "11px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY)
+                .set(StyleConstants.CSS_MARGIN, "0");
 
         tile.add(iconBadge, val, lbl, sub);
         return tile;
@@ -173,27 +187,30 @@ public class DashboardView extends VerticalLayout {
     // ─────────────────────────────────────────────────────────────────────────
     private Div createQuickActions() {
         Div card = new Div();
-        card.getStyle().set("background", BG_GRAY).set("border-radius", "20px").set("padding", "20px 24px").set("width",
-                "100%");
+        card.getStyle().set(StyleConstants.CSS_BACKGROUND, BG_GRAY).set(StyleConstants.CSS_BORDER_RADIUS, "20px")
+                .set(StyleConstants.CSS_PADDING, "20px 24px").set(StyleConstants.CSS_WIDTH, "100%");
 
         Span heading = new Span(translationService.translate("dashboard.quickActions"));
-        heading.getStyle().set("font-size", "12px").set("font-weight", "700").set("text-transform", "uppercase")
-                .set("letter-spacing", "0.08em").set("color", TEXT_SECONDARY).set("display", "block")
-                .set("margin-bottom", "14px");
+        heading.getStyle().set(StyleConstants.CSS_FONT_SIZE, "12px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_TEXT_TRANSFORM, "uppercase").set(StyleConstants.CSS_LETTER_SPACING, "0.08em")
+                .set(StyleConstants.CSS_COLOR, TEXT_SECONDARY).set(StyleConstants.CSS_DISPLAY, "block")
+                .set(StyleConstants.CSS_MARGIN_BOTTOM, "14px");
 
         HorizontalLayout actions = new HorizontalLayout();
         actions.setSpacing(false);
-        actions.getStyle().set("gap", "12px").set("flex-wrap", "wrap");
+        actions.getStyle().set("gap", "12px").set(StyleConstants.CSS_FLEX_WRAP, "wrap");
 
-        actions.add(
-                createActionBtn(translationService.translate("dashboard.generateLetter"), VaadinIcon.MAGIC, PRIMARY,
-                        "white", () -> getUI().ifPresent(ui -> ui.navigate(GeneratorWizardView.class))),
-                createActionBtn(translationService.translate("dashboard.myHistory"), VaadinIcon.CLOCK, "white",
-                        TEXT_PRIMARY, () -> getUI().ifPresent(ui -> ui.navigate(HistoryView.class))),
+        actions.add(createActionBtn(translationService.translate("dashboard.generateLetter"), VaadinIcon.MAGIC, PRIMARY,
+                StyleConstants.VAL_WHITE, () -> getUI().ifPresent(ui -> ui.navigate(GeneratorWizardView.class))),
+                createActionBtn(translationService.translate("dashboard.myHistory"), VaadinIcon.CLOCK,
+                        StyleConstants.VAL_WHITE, TEXT_PRIMARY,
+                        () -> getUI().ifPresent(ui -> ui.navigate(HistoryView.class))),
                 createActionBtn(translationService.translate("dashboard.manageResumes"), VaadinIcon.FILE_SEARCH,
-                        "white", TEXT_PRIMARY, () -> getUI().ifPresent(ui -> ui.navigate(ResumeManagerView.class))),
-                createActionBtn(translationService.translate("dashboard.profileSettings"), VaadinIcon.USER, "white",
-                        TEXT_PRIMARY, () -> getUI().ifPresent(ui -> ui.navigate(ProfileView.class))));
+                        StyleConstants.VAL_WHITE, TEXT_PRIMARY,
+                        () -> getUI().ifPresent(ui -> ui.navigate(ResumeManagerView.class))),
+                createActionBtn(translationService.translate("dashboard.profileSettings"), VaadinIcon.USER,
+                        StyleConstants.VAL_WHITE, TEXT_PRIMARY,
+                        () -> getUI().ifPresent(ui -> ui.navigate(ProfileView.class))));
 
         card.add(heading, actions);
         return card;
@@ -201,12 +218,14 @@ public class DashboardView extends VerticalLayout {
 
     private Button createActionBtn(String label, VaadinIcon icon, String bg, String fg, Runnable onClick) {
         Button btn = new Button(label, icon.create());
-        btn.getStyle().set("background", bg.equals(PRIMARY) ? PRIMARY : "rgba(0,0,0,0.06)")
-                .set("color", bg.equals(PRIMARY) ? "white" : TEXT_PRIMARY).set("font-weight", "600")
-                .set("border-radius", "9999px").set("padding", "10px 20px").set("font-size", "13px")
-                .set("border", "none");
+        btn.getStyle().set(StyleConstants.CSS_BACKGROUND, bg.equals(PRIMARY) ? PRIMARY : "rgba(0,0,0,0.06)")
+                .set(StyleConstants.CSS_COLOR, bg.equals(PRIMARY) ? StyleConstants.VAL_WHITE : TEXT_PRIMARY)
+                .set(StyleConstants.CSS_FONT_WEIGHT, "600")
+                .set(StyleConstants.CSS_BORDER_RADIUS, StyleConstants.VAL_9999PX)
+                .set(StyleConstants.CSS_PADDING, "10px 20px").set(StyleConstants.CSS_FONT_SIZE, "13px")
+                .set(StyleConstants.CSS_BORDER, "none");
         if (bg.equals(PRIMARY)) {
-            btn.getStyle().set("box-shadow", "0 4px 12px rgba(0,122,255,0.25)");
+            btn.getStyle().set(StyleConstants.CSS_BOX_SHADOW, "0 4px 12px rgba(0,122,255,0.25)");
         }
         btn.addClickListener(e -> onClick.run());
         return btn;
@@ -224,13 +243,13 @@ public class DashboardView extends VerticalLayout {
 
         // Section header
         H2 sectionTitle = new H2(translationService.translate("dashboard.recentLetters"));
-        sectionTitle.getStyle().set("font-size", "18px").set("font-weight", "700").set("color", TEXT_PRIMARY)
-                .set("margin", "0");
+        sectionTitle.getStyle().set(StyleConstants.CSS_FONT_SIZE, "18px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_COLOR, TEXT_PRIMARY).set(StyleConstants.CSS_MARGIN, "0");
 
         TextField searchField = new TextField();
         searchField.setPlaceholder(translationService.translate("dashboard.searchLetters"));
         searchField.setPrefixComponent(VaadinIcon.SEARCH.create());
-        searchField.getStyle().set("max-width", "220px");
+        searchField.getStyle().set(StyleConstants.CSS_MAX_WIDTH, "220px");
         searchField.addValueChangeListener(e -> filterLetters(e.getValue()));
 
         HorizontalLayout sectionHeader = new HorizontalLayout(sectionTitle, searchField);
@@ -241,7 +260,7 @@ public class DashboardView extends VerticalLayout {
         // Letters grid — assign to class field, NOT a local variable
         lettersGrid = new HorizontalLayout();
         lettersGrid.setWidthFull();
-        lettersGrid.getStyle().set("gap", "20px").set("flex-wrap", "wrap");
+        lettersGrid.getStyle().set("gap", "20px").set(StyleConstants.CSS_FLEX_WRAP, "wrap");
 
         allLetters = loadLetterData();
 
@@ -260,49 +279,64 @@ public class DashboardView extends VerticalLayout {
 
     private Div createNewLetterCard() {
         Div card = new Div();
-        card.getStyle().set("width", "260px").set("min-height", "180px").set("border", "2px dashed rgba(0,0,0,0.1)")
-                .set("border-radius", "16px").set("padding", "28px").set("display", "flex")
-                .set("flex-direction", "column").set("align-items", "center").set("justify-content", "center")
-                .set("gap", "10px").set("cursor", "pointer").set("color", TEXT_SECONDARY);
+        card.getStyle().set(StyleConstants.CSS_WIDTH, "260px").set(StyleConstants.CSS_MIN_HEIGHT, "180px")
+                .set(StyleConstants.CSS_BORDER, "2px dashed rgba(0,0,0,0.1)")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "16px").set(StyleConstants.CSS_PADDING, "28px")
+                .set(StyleConstants.CSS_DISPLAY, "flex").set(StyleConstants.CSS_FLEX_DIRECTION, "column")
+                .set(StyleConstants.CSS_ALIGN_ITEMS, StyleConstants.VAL_CENTER)
+                .set(StyleConstants.CSS_JUSTIFY_CONTENT, StyleConstants.VAL_CENTER).set("gap", "10px")
+                .set(StyleConstants.CSS_CURSOR, StyleConstants.VAL_POINTER)
+                .set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
 
         Div plus = new Div();
-        plus.getStyle().set("width", "44px").set("height", "44px").set("border-radius", "50%")
-                .set("background", "rgba(0,0,0,0.05)").set("display", "flex").set("align-items", "center")
-                .set("justify-content", "center");
+        plus.getStyle().set(StyleConstants.CSS_WIDTH, "44px").set(StyleConstants.CSS_HEIGHT, "44px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "50%").set(StyleConstants.CSS_BACKGROUND, "rgba(0,0,0,0.05)")
+                .set(StyleConstants.CSS_DISPLAY, "flex").set(StyleConstants.CSS_ALIGN_ITEMS, StyleConstants.VAL_CENTER)
+                .set(StyleConstants.CSS_JUSTIFY_CONTENT, StyleConstants.VAL_CENTER);
         plus.add(VaadinIcon.PLUS.create());
 
         Span txt = new Span(translationService.translate("dashboard.newCoverLetter"));
-        txt.getStyle().set("font-weight", "600").set("font-size", "14px");
+        txt.getStyle().set(StyleConstants.CSS_FONT_WEIGHT, "600").set(StyleConstants.CSS_FONT_SIZE, "14px");
 
         card.add(plus, txt);
         card.addClickListener(e -> getUI().ifPresent(ui -> ui.navigate(GeneratorWizardView.class)));
-        card.getElement().addEventListener("mouseenter", e -> card.getStyle().set("background", "rgba(0,122,255,0.03)")
-                .set("border-color", "rgba(0,122,255,0.3)").set("color", PRIMARY));
-        card.getElement().addEventListener("mouseleave", e -> card.getStyle().set("background", "transparent")
-                .set("border-color", "rgba(0,0,0,0.1)").set("color", TEXT_SECONDARY));
+        card.getElement().addEventListener(StyleConstants.VAL_MOUSEENTER,
+                e -> card.getStyle().set(StyleConstants.CSS_BACKGROUND, "rgba(0,122,255,0.03)")
+                        .set(StyleConstants.CSS_BORDER_COLOR, "rgba(0,122,255,0.3)")
+                        .set(StyleConstants.CSS_COLOR, PRIMARY));
+        card.getElement().addEventListener(StyleConstants.VAL_MOUSELEAVE,
+                e -> card.getStyle().set(StyleConstants.CSS_BACKGROUND, StyleConstants.VAL_TRANSPARENT)
+                        .set(StyleConstants.CSS_BORDER_COLOR, "rgba(0,0,0,0.1)")
+                        .set(StyleConstants.CSS_COLOR, TEXT_SECONDARY));
         return card;
     }
 
     private Div createLetterCard(String title, String company, String date, String status) {
         Div card = new Div();
-        card.getStyle().set("width", "260px").set("background", BG_WHITE).set("border", "1px solid rgba(0,0,0,0.07)")
-                .set("border-radius", "16px").set("padding", "20px").set("cursor", "pointer")
-                .set("transition", "all 0.2s");
+        card.getStyle().set(StyleConstants.CSS_WIDTH, "260px").set(StyleConstants.CSS_BACKGROUND, BG_WHITE)
+                .set(StyleConstants.CSS_BORDER, "1px solid rgba(0,0,0,0.07)")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "16px").set(StyleConstants.CSS_PADDING, "20px")
+                .set(StyleConstants.CSS_CURSOR, StyleConstants.VAL_POINTER)
+                .set(StyleConstants.CSS_TRANSITION, StyleConstants.VAL_ALL_0_2S);
 
         // Header row: icon + status badge
         Div iconBox = new Div();
-        iconBox.getStyle().set("width", "44px").set("height", "44px").set("border-radius", "14px")
-                .set("background", BG_GRAY).set("display", "flex").set("align-items", "center")
-                .set("justify-content", "center");
+        iconBox.getStyle().set(StyleConstants.CSS_WIDTH, "44px").set(StyleConstants.CSS_HEIGHT, "44px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "14px").set(StyleConstants.CSS_BACKGROUND, BG_GRAY)
+                .set(StyleConstants.CSS_DISPLAY, "flex").set(StyleConstants.CSS_ALIGN_ITEMS, StyleConstants.VAL_CENTER)
+                .set(StyleConstants.CSS_JUSTIFY_CONTENT, StyleConstants.VAL_CENTER);
         Icon fileIc = VaadinIcon.FILE_TEXT.create();
-        fileIc.getStyle().set("color", PRIMARY).set("width", "22px").set("height", "22px");
+        fileIc.getStyle().set(StyleConstants.CSS_COLOR, PRIMARY).set(StyleConstants.CSS_WIDTH, "22px")
+                .set(StyleConstants.CSS_HEIGHT, "22px");
         iconBox.add(fileIc);
 
         Span badge = new Span(translationService.translate("dashboard.status." + status.toLowerCase()));
-        badge.getStyle().set("font-size", "10px").set("font-weight", "700").set("padding", "3px 8px")
-                .set("border-radius", "9999px")
-                .set("background", "FINALIZED".equals(status) ? "rgba(52,199,89,0.12)" : "rgba(142,142,147,0.12)")
-                .set("color", "FINALIZED".equals(status) ? GREEN : TEXT_SECONDARY);
+        badge.getStyle().set(StyleConstants.CSS_FONT_SIZE, "10px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_PADDING, "3px 8px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, StyleConstants.VAL_9999PX)
+                .set(StyleConstants.CSS_BACKGROUND,
+                        StyleConstants.VAL_FINALIZED.equals(status) ? "rgba(52,199,89,0.12)" : "rgba(142,142,147,0.12)")
+                .set(StyleConstants.CSS_COLOR, StyleConstants.VAL_FINALIZED.equals(status) ? GREEN : TEXT_SECONDARY);
 
         HorizontalLayout top = new HorizontalLayout(iconBox, badge);
         top.setWidthFull();
@@ -311,41 +345,45 @@ public class DashboardView extends VerticalLayout {
 
         // Title + company
         H3 t = new H3(title);
-        t.getStyle().set("font-size", "15px").set("font-weight", "700").set("color", TEXT_PRIMARY).set("margin",
-                "14px 0 2px 0");
+        t.getStyle().set(StyleConstants.CSS_FONT_SIZE, "15px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_COLOR, TEXT_PRIMARY).set(StyleConstants.CSS_MARGIN, "14px 0 2px 0");
 
         Paragraph c = new Paragraph(company);
-        c.getStyle().set("font-size", "13px").set("color", TEXT_SECONDARY).set("margin", "0 0 14px 0");
+        c.getStyle().set(StyleConstants.CSS_FONT_SIZE, "13px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY)
+                .set(StyleConstants.CSS_MARGIN, "0 0 14px 0");
 
         // Footer: date + arrow
         Div divider = new Div();
-        divider.getStyle().set("height", "1px").set("background", "rgba(0,0,0,0.06)").set("margin-bottom", "12px");
+        divider.getStyle().set(StyleConstants.CSS_HEIGHT, "1px").set(StyleConstants.CSS_BACKGROUND, "rgba(0,0,0,0.06)")
+                .set(StyleConstants.CSS_MARGIN_BOTTOM, "12px");
 
         HorizontalLayout footer = new HorizontalLayout();
         footer.setWidthFull();
         footer.setAlignItems(FlexComponent.Alignment.CENTER);
 
         Icon clock = VaadinIcon.CLOCK.create();
-        clock.getStyle().set("width", "13px").set("height", "13px").set("color", TEXT_SECONDARY);
+        clock.getStyle().set(StyleConstants.CSS_WIDTH, "13px").set(StyleConstants.CSS_HEIGHT, "13px")
+                .set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
         Span dateSpan = new Span(date);
-        dateSpan.getStyle().set("font-size", "12px").set("color", TEXT_SECONDARY);
+        dateSpan.getStyle().set(StyleConstants.CSS_FONT_SIZE, "12px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
 
         HorizontalLayout dateRow = new HorizontalLayout(clock, dateSpan);
         dateRow.setAlignItems(FlexComponent.Alignment.CENTER);
         dateRow.getStyle().set("gap", "4px");
 
         Icon arrow = VaadinIcon.ARROW_RIGHT.create();
-        arrow.getStyle().set("color", PRIMARY).set("width", "16px");
+        arrow.getStyle().set(StyleConstants.CSS_COLOR, PRIMARY).set(StyleConstants.CSS_WIDTH, "16px");
 
         footer.add(dateRow, arrow);
         footer.expand(dateRow);
 
         card.add(top, t, c, divider, footer);
 
-        card.getElement().addEventListener("mouseenter", e -> card.getStyle()
-                .set("box-shadow", "0 8px 24px rgba(0,0,0,0.08)").set("transform", "translateY(-2px)"));
-        card.getElement().addEventListener("mouseleave",
-                e -> card.getStyle().set("box-shadow", "none").set("transform", "none"));
+        card.getElement().addEventListener(StyleConstants.VAL_MOUSEENTER,
+                e -> card.getStyle().set(StyleConstants.CSS_BOX_SHADOW, "0 8px 24px rgba(0,0,0,0.08)")
+                        .set(StyleConstants.CSS_TRANSFORM, "translateY(-2px)"));
+        card.getElement().addEventListener(StyleConstants.VAL_MOUSELEAVE, e -> card.getStyle()
+                .set(StyleConstants.CSS_BOX_SHADOW, "none").set(StyleConstants.CSS_TRANSFORM, "none"));
         card.addClickListener(e -> getUI().ifPresent(ui -> ui.navigate(HistoryView.class)));
 
         return card;
@@ -375,7 +413,7 @@ public class DashboardView extends VerticalLayout {
                     if (parts.length < 1)
                         return false;
                     try {
-                        int filePin = Integer.parseInt(parts[0].replaceAll("\\.[^.]+$", ""));
+                        int filePin = Integer.parseInt(parts[0].replaceAll(FILE_EXTENSION_REGEX, ""));
                         return filePin == userPin;
                     } catch (NumberFormatException e) {
                         return false;
@@ -406,7 +444,7 @@ public class DashboardView extends VerticalLayout {
                     if (parts.length < 1)
                         return false;
                     try {
-                        int filePin = Integer.parseInt(parts[0].replaceAll("\\.[^.]+$", ""));
+                        int filePin = Integer.parseInt(parts[0].replaceAll(FILE_EXTENSION_REGEX, ""));
                         if (filePin != userPin)
                             return false;
                     } catch (NumberFormatException e) {
@@ -432,57 +470,61 @@ public class DashboardView extends VerticalLayout {
      */
     private List<LetterCardData> loadLetterData() {
         List<LetterCardData> letters = new ArrayList<>();
-
-        // Get current user's PIN for filtering
         int userPin = currentUser != null ? currentUser.getPin() : -1;
-        if (userPin == -1) {
+        if (userPin == -1)
             return letters;
+
+        Path dir = Paths.get(COVER_LETTERS_DIR);
+        if (Files.exists(dir)) {
+            try (Stream<Path> stream = Files.list(dir)) {
+                stream.filter(Files::isRegularFile).sorted(this::compareByLastModifiedDesc).limit(20)
+                        .forEach(file -> processLetterFile(file, userPin, letters));
+            } catch (IOException e) {
+                // Document access failed silently
+            }
         }
 
-        try {
-            Path dir = Paths.get(COVER_LETTERS_DIR);
-            if (Files.exists(dir)) {
-                try (Stream<Path> stream = Files.list(dir).filter(Files::isRegularFile).sorted((a, b) -> {
-                    try {
-                        return Files.getLastModifiedTime(b).compareTo(Files.getLastModifiedTime(a));
-                    } catch (IOException e) {
-                        return 0;
-                    }
-                }).limit(20)) {
-                    stream.forEach(file -> {
-                        String name = file.getFileName().toString().replaceAll("\\.[^.]+$", ""); // strip extension
-                        String[] parts = name.split("_");
-                        // parts[0]=pin - filter by user PIN!
-                        if (parts.length < 1)
-                            return;
-                        try {
-                            int filePin = Integer.parseInt(parts[0]);
-                            if (filePin != userPin)
-                                return; // Only show current user's files
-                        } catch (NumberFormatException e) {
-                            return; // Skip files without valid PIN
-                        }
-                        // parts[1]=date, parts[2]=time,
-                        // parts[3]=company(first word), parts[4..]=jobtitle words
-                        String company = parts.length > 3 ? parts[3].replace("-", " ") : "Company";
-                        String jobTitle = parts.length > 4 ? String
-                                .join(" ", java.util.Arrays.copyOfRange(parts, 4, parts.length)).replace("-", " ")
-                                : "Cover Letter";
-                        letters.add(new LetterCardData(toTitleCase(jobTitle), toTitleCase(company),
-                                getRelativeDate(file), "FINALIZED"));
-                    });
-                }
-            }
-        } catch (IOException e) {
-            // fall through
-        }
         if (letters.isEmpty()) {
-            letters.add(new LetterCardData("Senior Product Designer", "Apple", "2 hours ago", "FINALIZED"));
+            letters.add(new LetterCardData("Senior Product Designer", "Apple", "2 hours ago",
+                    StyleConstants.VAL_FINALIZED));
             letters.add(new LetterCardData("React Developer", "Meta", "Yesterday", "ARCHIVED"));
             letters.add(new LetterCardData("UX Engineer", "Airbnb", "3 days ago", "ARCHIVED"));
         }
-        // Limit to 6 items
-        return letters.stream().limit(6).collect(java.util.stream.Collectors.toList());
+
+        return letters.stream().limit(6).toList();
+    }
+
+    private int compareByLastModifiedDesc(Path a, Path b) {
+        try {
+            return Files.getLastModifiedTime(b).compareTo(Files.getLastModifiedTime(a));
+        } catch (IOException e) {
+            return 0;
+        }
+    }
+
+    private void processLetterFile(Path file, int userPin, List<LetterCardData> letters) {
+        String name = file.getFileName().toString().replaceAll(FILE_EXTENSION_REGEX, "");
+        String[] parts = name.split("_");
+        if (parts.length < 1 || !isUserFile(parts[0], userPin))
+            return;
+
+        String company = parts.length > 3 ? parts[3].replace("-", " ") : "Company";
+        String jobTitle = "Cover Letter";
+        if (parts.length > 4) {
+            String[] titleParts = java.util.Arrays.copyOfRange(parts, 4, parts.length);
+            jobTitle = String.join(" ", titleParts).replace("-", " ");
+        }
+
+        letters.add(new LetterCardData(toTitleCase(jobTitle), toTitleCase(company), getRelativeDate(file),
+                StyleConstants.VAL_FINALIZED));
+    }
+
+    private boolean isUserFile(String pinPart, int userPin) {
+        try {
+            return Integer.parseInt(pinPart) == userPin;
+        } catch (NumberFormatException e) {
+            return false;
+        }
     }
 
     private String toTitleCase(String s) {
@@ -526,16 +568,12 @@ public class DashboardView extends VerticalLayout {
         List<com.vaadin.flow.component.Component> toRemove = lettersGrid.getChildren()
                 .filter(c -> c instanceof Div && !((Div) c).getChildren().anyMatch(
                         child -> child instanceof Span && "New Cover Letter".equals(((Span) child).getText())))
-                .collect(Collectors.toList());
+                .toList();
         toRemove.forEach(lettersGrid::remove);
 
-        List<LetterCardData> source = (query == null
-                || query.isBlank())
-                        ? allLetters
-                        : allLetters.stream()
-                                .filter(l -> l.title.toLowerCase().contains(query.toLowerCase())
-                                        || l.company.toLowerCase().contains(query.toLowerCase()))
-                                .collect(Collectors.toList());
+        List<LetterCardData> source = (query == null || query.isBlank()) ? allLetters
+                : allLetters.stream().filter(l -> l.title.toLowerCase().contains(query.toLowerCase())
+                        || l.company.toLowerCase().contains(query.toLowerCase())).toList();
 
         // Insert letter cards before the "new" card
         source.forEach(l -> lettersGrid.addComponentAtIndex(Math.max(0, (int) lettersGrid.getChildren().count() - 1),
