@@ -1,8 +1,11 @@
 package com.clbooster.app.views;
 
+import com.clbooster.app.views.util.StyleConstants;
+
 import jakarta.annotation.security.PermitAll;
 import com.clbooster.app.backend.service.authentication.AuthenticationService;
 import com.clbooster.app.i18n.TranslationService;
+import com.clbooster.aiservice.Parser;
 import com.vaadin.flow.server.VaadinSession;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.datepicker.DatePicker;
@@ -45,7 +48,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -53,6 +55,9 @@ import java.util.zip.ZipOutputStream;
 @PageTitle("History | CL Booster")
 @PermitAll
 public class HistoryView extends VerticalLayout {
+    private static final String BG_HOVER = "rgba(0,0,0,0.05)";
+    private static final String ATTR_TITLE = "title";
+    private static final String HISTORY_FILE_NOT_FOUND_KEY = "history.fileNotFound";
 
     private static final String PRIMARY = "#007AFF";
     private static final String TEXT_PRIMARY = "#1d1d1f";
@@ -75,8 +80,9 @@ public class HistoryView extends VerticalLayout {
         this.translationService = new TranslationService();
         setPadding(true);
         setSpacing(true);
-        getStyle().set("gap", "32px").set("padding", "32px").set("background", BG_WHITE).set("font-family",
-                "-apple-system, BlinkMacSystemFont, 'SF Pro Text', system-ui, sans-serif");
+        getStyle().set("gap", "32px").set(StyleConstants.CSS_PADDING, "32px")
+                .set(StyleConstants.CSS_BACKGROUND, BG_WHITE)
+                .set("font-family", "-apple-system, BlinkMacSystemFont, 'SF Pro Text', system-ui, sans-serif");
         setSizeFull();
 
         allItems = loadCoverLetterHistory();
@@ -84,7 +90,8 @@ public class HistoryView extends VerticalLayout {
         add(createHeader(), createFilters());
 
         cardsGrid = new Div();
-        cardsGrid.getStyle().set("display", "flex").set("flex-wrap", "wrap").set("gap", "24px").set("width", "100%");
+        cardsGrid.getStyle().set(StyleConstants.CSS_DISPLAY, "flex").set(StyleConstants.CSS_FLEX_WRAP, "wrap")
+                .set("gap", "24px").set(StyleConstants.CSS_WIDTH, "100%");
 
         refreshCardsGrid(allItems);
         add(cardsGrid);
@@ -99,16 +106,19 @@ public class HistoryView extends VerticalLayout {
         titleGroup.setSpacing(false);
 
         H2 title = new H2(translationService.translate("history.title"));
-        title.getStyle().set("font-size", "30px").set("font-weight", "700").set("color", TEXT_PRIMARY).set("margin",
-                "0");
+        title.getStyle().set(StyleConstants.CSS_FONT_SIZE, "30px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_COLOR, TEXT_PRIMARY).set(StyleConstants.CSS_MARGIN, "0");
 
         Paragraph subtitle = new Paragraph(translationService.translate("history.reviewRefine"));
-        subtitle.getStyle().set("font-size", "14px").set("color", TEXT_SECONDARY).set("margin", "0");
+        subtitle.getStyle().set(StyleConstants.CSS_FONT_SIZE, "14px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY)
+                .set(StyleConstants.CSS_MARGIN, "0");
         titleGroup.add(title, subtitle);
 
         Button exportBtn = new Button(translationService.translate("history.exportAll"), VaadinIcon.DOWNLOAD.create());
-        exportBtn.getStyle().set("background", "rgba(0,0,0,0.05)").set("color", TEXT_PRIMARY).set("font-weight", "600")
-                .set("border-radius", "9999px").set("padding", "10px 20px").set("border", "none");
+        exportBtn.getStyle().set(StyleConstants.CSS_BACKGROUND, BG_HOVER).set(StyleConstants.CSS_COLOR, TEXT_PRIMARY)
+                .set(StyleConstants.CSS_FONT_WEIGHT, "600")
+                .set(StyleConstants.CSS_BORDER_RADIUS, StyleConstants.VAL_9999PX)
+                .set(StyleConstants.CSS_PADDING, "10px 20px").set(StyleConstants.CSS_BORDER, "none");
         exportBtn.addClickListener(e -> exportAllFiles());
 
         HorizontalLayout header = new HorizontalLayout(titleGroup, exportBtn);
@@ -145,9 +155,10 @@ public class HistoryView extends VerticalLayout {
 
     private Button createFilterButton(String text, VaadinIcon icon) {
         Button btn = new Button(text, icon.create());
-        btn.getStyle().set("background", BG_GRAY).set("color", TEXT_PRIMARY).set("font-weight", "500")
-                .set("font-size", "14px").set("border-radius", "12px").set("border", "none")
-                .set("padding", "10px 16px");
+        btn.getStyle().set(StyleConstants.CSS_BACKGROUND, BG_GRAY).set(StyleConstants.CSS_COLOR, TEXT_PRIMARY)
+                .set(StyleConstants.CSS_FONT_WEIGHT, "500").set(StyleConstants.CSS_FONT_SIZE, "14px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "12px").set(StyleConstants.CSS_BORDER, "none")
+                .set(StyleConstants.CSS_PADDING, "10px 16px");
         return btn;
     }
 
@@ -174,7 +185,7 @@ public class HistoryView extends VerticalLayout {
             applyFilters();
             dialog.close();
         });
-        clearBtn.getStyle().set("color", TEXT_SECONDARY);
+        clearBtn.getStyle().set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
 
         Button applyBtn = new Button(translationService.translate("history.apply"), e -> {
             dateFrom = fromDate.getValue();
@@ -182,7 +193,8 @@ public class HistoryView extends VerticalLayout {
             applyFilters();
             dialog.close();
         });
-        applyBtn.getStyle().set("background", PRIMARY).set("color", "white");
+        applyBtn.getStyle().set(StyleConstants.CSS_BACKGROUND, PRIMARY).set(StyleConstants.CSS_COLOR,
+                StyleConstants.VAL_WHITE);
 
         buttons.add(clearBtn, applyBtn);
         content.add(buttons);
@@ -197,7 +209,7 @@ public class HistoryView extends VerticalLayout {
 
         Select<String> statusSelect = new Select<>();
         statusSelect.setLabel(translationService.translate("history.status"));
-        statusSelect.setItems("ALL", "SENT", "FINALIZED", "ARCHIVED");
+        statusSelect.setItems("ALL", "SENT", StyleConstants.VAL_FINALIZED, "ARCHIVED");
         statusSelect.setValue(currentStatusFilter);
         statusSelect.setWidthFull();
         content.add(statusSelect);
@@ -211,14 +223,15 @@ public class HistoryView extends VerticalLayout {
             applyFilters();
             dialog.close();
         });
-        clearBtn.getStyle().set("color", TEXT_SECONDARY);
+        clearBtn.getStyle().set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
 
         Button applyBtn = new Button(translationService.translate("history.apply"), e -> {
             currentStatusFilter = statusSelect.getValue();
             applyFilters();
             dialog.close();
         });
-        applyBtn.getStyle().set("background", PRIMARY).set("color", "white");
+        applyBtn.getStyle().set(StyleConstants.CSS_BACKGROUND, PRIMARY).set(StyleConstants.CSS_COLOR,
+                StyleConstants.VAL_WHITE);
 
         buttons.add(clearBtn, applyBtn);
         content.add(buttons);
@@ -229,23 +242,27 @@ public class HistoryView extends VerticalLayout {
     private void applyFilters() {
         String searchText = searchField.getValue() != null ? searchField.getValue().toLowerCase().trim() : "";
 
-        List<HistoryItem> filtered = allItems.stream().filter(item -> {
-            if (!searchText.isEmpty()) {
-                boolean matches = item.title.toLowerCase().contains(searchText)
-                        || item.company.toLowerCase().contains(searchText);
-                if (!matches)
-                    return false;
-            }
-            if (!"ALL".equals(currentStatusFilter) && !item.status.equals(currentStatusFilter))
-                return false;
-            if (dateFrom != null && item.timestamp.toLocalDate().isBefore(dateFrom))
-                return false;
-            if (dateTo != null && item.timestamp.toLocalDate().isAfter(dateTo))
-                return false;
-            return true;
-        }).collect(Collectors.toList());
+        List<HistoryItem> filtered = allItems.stream().filter(item -> matchesSearch(item, searchText))
+                .filter(this::matchesStatus).filter(this::matchesDateRange).toList();
 
         refreshCardsGrid(filtered);
+    }
+
+    private boolean matchesSearch(HistoryItem item, String searchText) {
+        return searchText.isEmpty() || item.title.toLowerCase().contains(searchText)
+                || item.company.toLowerCase().contains(searchText);
+    }
+
+    private boolean matchesStatus(HistoryItem item) {
+        return "ALL".equals(currentStatusFilter) || item.status.equals(currentStatusFilter);
+    }
+
+    private boolean matchesDateRange(HistoryItem item) {
+        LocalDate itemDate = item.timestamp.toLocalDate();
+        if (dateFrom != null && itemDate.isBefore(dateFrom)) {
+            return false;
+        }
+        return dateTo == null || !itemDate.isAfter(dateTo);
     }
 
     // ── Cards grid ─────────────────────────────────────────────────────────────
@@ -266,23 +283,27 @@ public class HistoryView extends VerticalLayout {
         emptyState.setWidthFull();
         emptyState.setAlignItems(FlexComponent.Alignment.CENTER);
         emptyState.setJustifyContentMode(FlexComponent.JustifyContentMode.CENTER);
-        emptyState.getStyle().set("padding", "60px 20px").set("gap", "16px");
+        emptyState.getStyle().set(StyleConstants.CSS_PADDING, "60px 20px").set("gap", "16px");
 
         Icon emptyIcon = VaadinIcon.FILE_TEXT_O.create();
-        emptyIcon.getStyle().set("color", TEXT_SECONDARY).set("width", "64px").set("height", "64px");
+        emptyIcon.getStyle().set(StyleConstants.CSS_COLOR, TEXT_SECONDARY).set(StyleConstants.CSS_WIDTH, "64px")
+                .set(StyleConstants.CSS_HEIGHT, "64px");
 
         H3 title = new H3(translationService.translate("history.noCoverLetters"));
-        title.getStyle().set("font-size", "20px").set("font-weight", "600").set("color", TEXT_PRIMARY).set("margin",
-                "0");
+        title.getStyle().set(StyleConstants.CSS_FONT_SIZE, "20px").set(StyleConstants.CSS_FONT_WEIGHT, "600")
+                .set(StyleConstants.CSS_COLOR, TEXT_PRIMARY).set(StyleConstants.CSS_MARGIN, "0");
 
         Paragraph description = new Paragraph(translationService.translate("history.generateFirst"));
-        description.getStyle().set("font-size", "14px").set("color", TEXT_SECONDARY).set("margin", "0");
+        description.getStyle().set(StyleConstants.CSS_FONT_SIZE, "14px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY)
+                .set(StyleConstants.CSS_MARGIN, "0");
 
         Button createBtn = new Button(translationService.translate("history.createCoverLetter"),
                 VaadinIcon.PLUS.create());
-        createBtn.getStyle().set("background", PRIMARY).set("color", "white").set("font-weight", "600")
-                .set("border-radius", "9999px").set("padding", "12px 24px").set("border", "none")
-                .set("margin-top", "8px");
+        createBtn.getStyle().set(StyleConstants.CSS_BACKGROUND, PRIMARY)
+                .set(StyleConstants.CSS_COLOR, StyleConstants.VAL_WHITE).set(StyleConstants.CSS_FONT_WEIGHT, "600")
+                .set(StyleConstants.CSS_BORDER_RADIUS, StyleConstants.VAL_9999PX)
+                .set(StyleConstants.CSS_PADDING, "12px 24px").set(StyleConstants.CSS_BORDER, "none")
+                .set(StyleConstants.CSS_MARGIN_TOP, "8px");
         createBtn.addClickListener(e -> getUI().ifPresent(ui -> ui.navigate(GeneratorWizardView.class)));
 
         emptyState.add(emptyIcon, title, description, createBtn);
@@ -291,9 +312,11 @@ public class HistoryView extends VerticalLayout {
 
     private Div createHistoryCard(HistoryItem item) {
         Div card = new Div();
-        card.getStyle().set("width", "280px").set("background", BG_WHITE).set("border", "1px solid rgba(0,0,0,0.05)")
-                .set("border-radius", "24px").set("padding", "24px").set("cursor", "pointer")
-                .set("transition", "all 0.3s ease");
+        card.getStyle().set(StyleConstants.CSS_WIDTH, "280px").set(StyleConstants.CSS_BACKGROUND, BG_WHITE)
+                .set(StyleConstants.CSS_BORDER, "1px solid rgba(0,0,0,0.05)")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "24px").set(StyleConstants.CSS_PADDING, "24px")
+                .set(StyleConstants.CSS_CURSOR, StyleConstants.VAL_POINTER)
+                .set(StyleConstants.CSS_TRANSITION, "all 0.3s ease");
 
         // Header row: icon + status badge
         HorizontalLayout header = new HorizontalLayout();
@@ -301,11 +324,13 @@ public class HistoryView extends VerticalLayout {
         header.setWidthFull();
 
         Div iconContainer = new Div();
-        iconContainer.getStyle().set("width", "48px").set("height", "48px").set("border-radius", "16px")
-                .set("background", BG_GRAY).set("display", "flex").set("align-items", "center")
-                .set("justify-content", "center");
+        iconContainer.getStyle().set(StyleConstants.CSS_WIDTH, "48px").set(StyleConstants.CSS_HEIGHT, "48px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "16px").set(StyleConstants.CSS_BACKGROUND, BG_GRAY)
+                .set(StyleConstants.CSS_DISPLAY, "flex").set(StyleConstants.CSS_ALIGN_ITEMS, StyleConstants.VAL_CENTER)
+                .set(StyleConstants.CSS_JUSTIFY_CONTENT, StyleConstants.VAL_CENTER);
         Icon fileIcon = VaadinIcon.FILE_TEXT.create();
-        fileIcon.getStyle().set("color", PRIMARY).set("width", "24px").set("height", "24px");
+        fileIcon.getStyle().set(StyleConstants.CSS_COLOR, PRIMARY).set(StyleConstants.CSS_WIDTH, "24px")
+                .set(StyleConstants.CSS_HEIGHT, "24px");
         iconContainer.add(fileIcon);
 
         Span statusBadge = createStatusBadge(item.status);
@@ -314,11 +339,12 @@ public class HistoryView extends VerticalLayout {
         header.expand(statusBadge);
 
         H3 title = new H3(item.title);
-        title.getStyle().set("font-size", "16px").set("font-weight", "700").set("color", TEXT_PRIMARY).set("margin",
-                "16px 0 4px 0");
+        title.getStyle().set(StyleConstants.CSS_FONT_SIZE, "16px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_COLOR, TEXT_PRIMARY).set(StyleConstants.CSS_MARGIN, "16px 0 4px 0");
 
         Paragraph company = new Paragraph(item.company);
-        company.getStyle().set("font-size", "14px").set("color", TEXT_SECONDARY).set("margin", "0 0 16px 0");
+        company.getStyle().set(StyleConstants.CSS_FONT_SIZE, "14px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY)
+                .set(StyleConstants.CSS_MARGIN, StyleConstants.VAL_0_0_16PX);
 
         // Footer: date + action buttons
         HorizontalLayout footer = new HorizontalLayout();
@@ -328,11 +354,11 @@ public class HistoryView extends VerticalLayout {
 
         HorizontalLayout dateRow = new HorizontalLayout();
         dateRow.setAlignItems(FlexComponent.Alignment.CENTER);
-        dateRow.getStyle().set("gap", "4px").set("color", TEXT_SECONDARY);
+        dateRow.getStyle().set("gap", "4px").set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
         Icon clock = VaadinIcon.CLOCK.create();
-        clock.getStyle().set("width", "14px").set("height", "14px");
+        clock.getStyle().set(StyleConstants.CSS_WIDTH, "14px").set(StyleConstants.CSS_HEIGHT, "14px");
         Span dateText = new Span(item.date);
-        dateText.getStyle().set("font-size", "12px");
+        dateText.getStyle().set(StyleConstants.CSS_FONT_SIZE, "12px");
         dateRow.add(clock, dateText);
 
         HorizontalLayout actions = new HorizontalLayout();
@@ -340,17 +366,17 @@ public class HistoryView extends VerticalLayout {
 
         // View button
         Button viewBtn = createIconButton(VaadinIcon.EYE);
-        viewBtn.getElement().setAttribute("title", translationService.translate("history.preview"));
+        viewBtn.getElement().setAttribute(ATTR_TITLE, translationService.translate("history.preview"));
         viewBtn.addClickListener(e -> openPreviewDialog(item));
 
         // Download button
         Button downloadBtn = createIconButton(VaadinIcon.DOWNLOAD);
-        downloadBtn.getElement().setAttribute("title", translationService.translate("history.download"));
+        downloadBtn.getElement().setAttribute(ATTR_TITLE, translationService.translate("history.download"));
         downloadBtn.addClickListener(e -> downloadCoverLetter(item));
 
         // Edit button - navigates to editor with item metadata in session
         Button editBtn = createIconButton(VaadinIcon.EDIT);
-        editBtn.getElement().setAttribute("title", translationService.translate("history.edit"));
+        editBtn.getElement().setAttribute(ATTR_TITLE, translationService.translate("history.edit"));
         editBtn.addClickListener(e -> {
             VaadinSession session = VaadinSession.getCurrent();
             session.setAttribute("gen.jobTitle", item.title);
@@ -370,8 +396,8 @@ public class HistoryView extends VerticalLayout {
 
         // Delete button
         Button deleteBtn = createIconButton(VaadinIcon.TRASH);
-        deleteBtn.getElement().setAttribute("title", translationService.translate("history.delete"));
-        deleteBtn.getStyle().set("color", "#FF3B30");
+        deleteBtn.getElement().setAttribute(ATTR_TITLE, translationService.translate("history.delete"));
+        deleteBtn.getStyle().set(StyleConstants.CSS_COLOR, "#FF3B30");
         deleteBtn.addClickListener(e -> confirmAndDelete(item, card));
 
         actions.add(viewBtn, downloadBtn, editBtn, deleteBtn);
@@ -380,13 +406,11 @@ public class HistoryView extends VerticalLayout {
 
         card.add(header, title, company, footer);
 
-        card.getElement().addEventListener("mouseenter", e -> {
-            card.getStyle().set("box-shadow", "0 20px 25px -5px rgba(0,0,0,0.1)").set("border-color",
-                    "rgba(0,0,0,0.1)");
-        });
-        card.getElement().addEventListener("mouseleave", e -> {
-            card.getStyle().set("box-shadow", "none").set("border-color", "rgba(0,0,0,0.05)");
-        });
+        card.getElement().addEventListener(StyleConstants.VAL_MOUSEENTER,
+                e -> card.getStyle().set(StyleConstants.CSS_BOX_SHADOW, "0 20px 25px -5px rgba(0,0,0,0.1)")
+                        .set(StyleConstants.CSS_BORDER_COLOR, "rgba(0,0,0,0.1)"));
+        card.getElement().addEventListener(StyleConstants.VAL_MOUSELEAVE, e -> card.getStyle()
+                .set(StyleConstants.CSS_BOX_SHADOW, "none").set(StyleConstants.CSS_BORDER_COLOR, BG_HOVER));
 
         return card;
     }
@@ -403,7 +427,7 @@ public class HistoryView extends VerticalLayout {
         buttons.setWidthFull();
 
         Button cancelBtn = new Button(translationService.translate("history.cancel"), e -> confirm.close());
-        cancelBtn.getStyle().set("color", TEXT_SECONDARY);
+        cancelBtn.getStyle().set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
 
         Button deleteBtn = new Button(translationService.translate("history.delete"), e -> {
             File file = new File(item.filePath);
@@ -418,7 +442,8 @@ public class HistoryView extends VerticalLayout {
             }
             confirm.close();
         });
-        deleteBtn.getStyle().set("background", "#FF3B30").set("color", "white");
+        deleteBtn.getStyle().set(StyleConstants.CSS_BACKGROUND, "#FF3B30").set(StyleConstants.CSS_COLOR,
+                StyleConstants.VAL_WHITE);
 
         buttons.add(cancelBtn, deleteBtn);
         content.add(buttons);
@@ -450,26 +475,28 @@ public class HistoryView extends VerticalLayout {
         if (file.exists()) {
             String text = extractTextFromFile(file);
             Pre pre = new Pre(text);
-            pre.getStyle().set("white-space", "pre-wrap").set("font-size", "13px").set("line-height", "1.7")
-                    .set("margin", "0").set("width", "100%");
+            pre.getStyle().set(StyleConstants.CSS_WHITE_SPACE, "pre-wrap").set(StyleConstants.CSS_FONT_SIZE, "13px")
+                    .set("line-height", "1.7").set(StyleConstants.CSS_MARGIN, "0")
+                    .set(StyleConstants.CSS_WIDTH, "100%");
             content.add(pre);
         } else {
-            content.add(new Paragraph(translationService.translate("history.fileNotFound", item.filePath)));
+            content.add(new Paragraph(translationService.translate(HISTORY_FILE_NOT_FOUND_KEY, item.filePath)));
         }
 
         HorizontalLayout footer = new HorizontalLayout();
         footer.setWidthFull();
         footer.setJustifyContentMode(FlexComponent.JustifyContentMode.END);
         footer.setAlignItems(FlexComponent.Alignment.CENTER);
-        footer.getStyle().set("padding", "12px 16px").set("border-top", "1px solid rgba(0,0,0,0.08)")
-                .set("flex", "0 0 auto").set("background", BG_WHITE);
+        footer.getStyle().set(StyleConstants.CSS_PADDING, "12px 16px").set("border-top", "1px solid rgba(0,0,0,0.08)")
+                .set("flex", "0 0 auto").set(StyleConstants.CSS_BACKGROUND, BG_WHITE);
 
         Button closeBtn = new Button(translationService.translate("history.cancel"), e -> dialog.close());
         Button dlBtn = new Button(translationService.translate("history.download"), VaadinIcon.DOWNLOAD.create(), e -> {
             downloadCoverLetter(item);
             dialog.close();
         });
-        dlBtn.getStyle().set("background", PRIMARY).set("color", "white");
+        dlBtn.getStyle().set(StyleConstants.CSS_BACKGROUND, PRIMARY).set(StyleConstants.CSS_COLOR,
+                StyleConstants.VAL_WHITE);
 
         footer.add(closeBtn, dlBtn);
         wrapper.add(content, footer);
@@ -505,46 +532,11 @@ public class HistoryView extends VerticalLayout {
     }
 
     /**
-     * Extracts plain text from a .docx file by reading word/document.xml from the
-     * ZIP archive and stripping XML tags.
+     * Extracts plain text from a .docx file.
      */
-    private String extractTextFromDocx(File file) throws IOException {
-        try (java.util.zip.ZipFile zip = new java.util.zip.ZipFile(file)) {
-            java.util.zip.ZipEntry entry = zip.getEntry("word/document.xml");
-            if (entry == null) {
-                return "[Could not find document content in DOCX file.]";
-            }
-            try (java.io.InputStream is = zip.getInputStream(entry)) {
-                String xml = new String(is.readAllBytes(), java.nio.charset.StandardCharsets.UTF_8);
-                // Extract text between <w:t> tags and preserve paragraph breaks
-                StringBuilder sb = new StringBuilder();
-                int i = 0;
-                while (i < xml.length()) {
-                    // New paragraph: <w:p[ >]
-                    if (xml.startsWith("<w:p", i) && i + 4 < xml.length()
-                            && (xml.charAt(i + 4) == ' ' || xml.charAt(i + 4) == '>' || xml.charAt(i + 4) == '/')) {
-                        if (sb.length() > 0 && sb.charAt(sb.length() - 1) != '\n') {
-                            sb.append('\n');
-                        }
-                    }
-                    // Text run: <w:t ...>text</w:t>
-                    if (xml.startsWith("<w:t", i)) {
-                        int start = xml.indexOf('>', i);
-                        if (start != -1) {
-                            int end = xml.indexOf("</w:t>", start);
-                            if (end != -1) {
-                                sb.append(xml, start + 1, end);
-                                i = end + 6;
-                                continue;
-                            }
-                        }
-                    }
-                    i++;
-                }
-                String result = sb.toString().trim();
-                return result.isEmpty() ? "[Document appears to be empty.]" : result;
-            }
-        }
+    private String extractTextFromDocx(File file) {
+        Parser parser = new Parser();
+        return parser.parseFileToJson(file.getAbsolutePath());
     }
 
     private boolean isPrintable(String text) {
@@ -559,7 +551,7 @@ public class HistoryView extends VerticalLayout {
     private void downloadCoverLetter(HistoryItem item) {
         File file = new File(item.filePath);
         if (!file.exists()) {
-            Notification.show(translationService.translate("history.fileNotFound", item.filePath), 3000,
+            Notification.show(translationService.translate(HISTORY_FILE_NOT_FOUND_KEY, item.filePath), 3000,
                     Notification.Position.TOP_CENTER);
             return;
         }
@@ -569,7 +561,7 @@ public class HistoryView extends VerticalLayout {
                     : "application/vnd.openxmlformats-officedocument.wordprocessingml.document";
             serveDownload(bytes, mimeType, file.getName());
         } catch (IOException ex) {
-            Notification.show(translationService.translate("history.fileNotFound", ex.getMessage()), 3000,
+            Notification.show(translationService.translate(HISTORY_FILE_NOT_FOUND_KEY, ex.getMessage()), 3000,
                     Notification.Position.TOP_CENTER);
             LOGGER.log(Level.SEVERE, "Download error", ex);
         }
@@ -676,20 +668,7 @@ public class HistoryView extends VerticalLayout {
             }
 
             // Parse timestamp
-            LocalDateTime timestamp;
-            try {
-                if (parts.length >= 3 && parts[1].length() == 8 && parts[2].length() == 6) {
-                    timestamp = LocalDateTime.parse(parts[1] + "_" + parts[2],
-                            DateTimeFormatter.ofPattern("yyyyMMdd_HHmmss"));
-                } else if (parts[1].length() == 13) {
-                    timestamp = LocalDateTime.ofInstant(Instant.ofEpochMilli(Long.parseLong(parts[1])),
-                            ZoneId.systemDefault());
-                } else {
-                    timestamp = LocalDateTime.ofInstant(Instant.ofEpochMilli(lastModified), ZoneId.systemDefault());
-                }
-            } catch (Exception e) {
-                timestamp = LocalDateTime.ofInstant(Instant.ofEpochMilli(lastModified), ZoneId.systemDefault());
-            }
+            LocalDateTime timestamp = parseTimestamp(parts, lastModified);
 
             String formattedDate = timestamp.format(DateTimeFormatter.ofPattern("MMM d, yyyy"));
 
@@ -711,7 +690,7 @@ public class HistoryView extends VerticalLayout {
 
             // Status based on age
             LocalDateTime now = LocalDateTime.now();
-            String status = timestamp.plusDays(30).isAfter(now) ? "FINALIZED" : "ARCHIVED";
+            String status = timestamp.plusDays(30).isAfter(now) ? StyleConstants.VAL_FINALIZED : "ARCHIVED";
 
             return new HistoryItem(jobTitle, company, formattedDate, status, pin, timestamp, filePath);
         } catch (Exception e) {
@@ -720,41 +699,62 @@ public class HistoryView extends VerticalLayout {
         }
     }
 
+    private LocalDateTime parseTimestamp(String[] parts, long lastModified) {
+        try {
+            if (parts.length >= 3 && parts[1].length() == 8 && parts[2].length() == 6) {
+                return LocalDateTime.parse(parts[1] + "_" + parts[2], DateTimeFormatter.ofPattern("yyyyMMdd_HHmmss"));
+            } else if (parts[1].length() == 13) {
+                return LocalDateTime.ofInstant(Instant.ofEpochMilli(Long.parseLong(parts[1])), ZoneId.systemDefault());
+            }
+        } catch (Exception ignored) {
+            // Ignored, fallback to lastModified time
+        }
+        return LocalDateTime.ofInstant(Instant.ofEpochMilli(lastModified), ZoneId.systemDefault());
+    }
+
     // ── UI helpers ─────────────────────────────────────────────────────────────
 
     private Span createStatusBadge(String status) {
         Span badge = new Span(status);
-        badge.getStyle().set("font-size", "11px").set("font-weight", "700").set("padding", "4px 10px")
-                .set("border-radius", "9999px").set("text-transform", "uppercase").set("letter-spacing", "0.05em");
+        badge.getStyle().set(StyleConstants.CSS_FONT_SIZE, "11px").set(StyleConstants.CSS_FONT_WEIGHT, "700")
+                .set(StyleConstants.CSS_PADDING, "4px 10px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, StyleConstants.VAL_9999PX)
+                .set(StyleConstants.CSS_TEXT_TRANSFORM, "uppercase").set(StyleConstants.CSS_LETTER_SPACING, "0.05em");
         switch (status) {
         case "SENT":
-            badge.getStyle().set("background", "rgba(52,199,89,0.1)").set("color", SUCCESS);
+            badge.getStyle().set(StyleConstants.CSS_BACKGROUND, "rgba(52,199,89,0.1)").set(StyleConstants.CSS_COLOR,
+                    SUCCESS);
             break;
-        case "FINALIZED":
-            badge.getStyle().set("background", "rgba(0,122,255,0.1)").set("color", PRIMARY);
+        case StyleConstants.VAL_FINALIZED:
+            badge.getStyle().set(StyleConstants.CSS_BACKGROUND, "rgba(0,122,255,0.1)").set(StyleConstants.CSS_COLOR,
+                    PRIMARY);
             break;
         default:
-            badge.getStyle().set("background", "rgba(0,0,0,0.05)").set("color", TEXT_SECONDARY);
+            badge.getStyle().set(StyleConstants.CSS_BACKGROUND, BG_HOVER).set(StyleConstants.CSS_COLOR, TEXT_SECONDARY);
         }
         return badge;
     }
 
     private Button createIconButton(VaadinIcon icon) {
         Button btn = new Button(icon.create());
-        btn.getStyle().set("background", "transparent").set("color", TEXT_SECONDARY).set("padding", "6px")
-                .set("border-radius", "8px").set("border", "none");
-        btn.getElement().addEventListener("mouseenter",
-                e -> btn.getStyle().set("background", "rgba(0,0,0,0.05)").set("color", TEXT_PRIMARY));
-        btn.getElement().addEventListener("mouseleave",
-                e -> btn.getStyle().set("background", "transparent").set("color", TEXT_SECONDARY));
+        btn.getStyle().set(StyleConstants.CSS_BACKGROUND, StyleConstants.VAL_TRANSPARENT)
+                .set(StyleConstants.CSS_COLOR, TEXT_SECONDARY).set(StyleConstants.CSS_PADDING, "6px")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "8px").set(StyleConstants.CSS_BORDER, "none");
+        btn.getElement().addEventListener(StyleConstants.VAL_MOUSEENTER, e -> btn.getStyle()
+                .set(StyleConstants.CSS_BACKGROUND, BG_HOVER).set(StyleConstants.CSS_COLOR, TEXT_PRIMARY));
+        btn.getElement().addEventListener(StyleConstants.VAL_MOUSELEAVE,
+                e -> btn.getStyle().set(StyleConstants.CSS_BACKGROUND, StyleConstants.VAL_TRANSPARENT)
+                        .set(StyleConstants.CSS_COLOR, TEXT_SECONDARY));
         return btn;
     }
 
     private Button createLoadMoreButton() {
         Button btn = new Button(translationService.translate("history.loadMore"));
-        btn.getStyle().set("background", "transparent").set("color", TEXT_SECONDARY).set("font-weight", "500")
-                .set("font-size", "14px").set("border", "1px dashed rgba(0,0,0,0.15)").set("border-radius", "12px")
-                .set("padding", "16px").set("width", "100%").set("margin-top", "8px");
+        btn.getStyle().set(StyleConstants.CSS_BACKGROUND, StyleConstants.VAL_TRANSPARENT)
+                .set(StyleConstants.CSS_COLOR, TEXT_SECONDARY).set(StyleConstants.CSS_FONT_WEIGHT, "500")
+                .set(StyleConstants.CSS_FONT_SIZE, "14px").set(StyleConstants.CSS_BORDER, "1px dashed rgba(0,0,0,0.15)")
+                .set(StyleConstants.CSS_BORDER_RADIUS, "12px").set(StyleConstants.CSS_PADDING, "16px")
+                .set(StyleConstants.CSS_WIDTH, "100%").set(StyleConstants.CSS_MARGIN_TOP, "8px");
         return btn;
     }
 
